# motion_wheels

./: .gitignore  .gitmodules  LICENSE  README.md
.github/workflows/: main.yml
doc/: _index.md
esp32/main/: CMakeLists.txt
esp32/main/include/: motors.h
firmware/: .clang-format  CMakeLists.txt  sdkconfig.defaults
firmware/main/: CMakeLists.txt  commands.hpp  config.h  controlcallback.h  main.hpp  registers.cpp  registers.hpp
firmware/main/communication/: bluetooth_serial.cpp  bluetooth_serial.hpp  can.cpp  can.hpp  communication.cmake  serial.cpp
firmware/main/indication/: indication.cmake  rg_led.cpp  rg_led.hpp
firmware/main/motion/: motion.cmake  motors_on_esp32.cpp  motors_on_esp32.hpp
firmware/main/port/: README  delay.c  millis.c  port.cmake
firmware/main/sensors/: position_unit.cpp  position_unit.hpp  sensors.cmake
firmware/test/: CMakeLists.txt  main.cpp  test_motors.cpp
firmware/test/stubs/esp_idf/driver/: mcpwm.h
schematic/: schematic.fzz
schematic/motion_wheels/: motion_wheels.kicad_pro  motion_wheels.kicad_sch  power.kicad_sch  sym-lib-table
schematic/platform/: platform-cache.lib  platform-rescue.lib  platform.kicad_prl  platform.kicad_pro  platform.pro  platform.sch  power.kicad_sch  power.sch  sym-lib-table
software/: .clang-format  motion_wheels.code-workspace  platformio.ini  sdkconfig.default  sdkconfig.defaults  sdkconfig.old  workspace.code-workspace
software/include/: common_config.h  controlcallback.h  display.h  i2c.h  motors.h  rotsensors.h
software/main/: CMakeLists.txt  commands.cpp  commands.hpp  config.h  controlcallback.cpp  macros.h  main.cmake  main.cpp  main.hpp
software/main/communication/: bluetooth_serial.cpp  bluetooth_serial.hpp  can.cpp  can.hpp  serial.cpp  serial.hpp  zk_i2c.c
software/main/high_level/: README  commands.cpp  commands.hpp  controlcallback.cpp  controlcallback.h  registers.cpp  registers.hpp
software/main/include/: bluetooth_serial.hpp  commands.hpp  common.h  common_config.h  config.h  controlcallback.h  hw_motors_impl.hpp  indication.hpp  motors.h  motors.hpp  position_unit.h  registers.hpp  rotsensors.hpp  serial.h  zk_i2c.h
software/main/include/drivers/: README  indication.hpp  motors_on_esp32.hpp
software/main/include/high_level/: commands.hpp  registers.hpp
software/main/include/port/: README  delay.h  millis.h
software/main/include/subsystems_hw/: README  bluetooth_serial.hpp  position_unit.h  zk_i2c.h
software/main/indication/: indication.cpp  rg_led.cpp
software/main/motion/: motor_controller.cpp  motor_controller.hpp  motors_on_esp32.cpp  motors_on_esp32.hpp
software/main/port/: delay.c  delay.h  millis.c  millis.h
software/main/sensors/: position_unit.cpp  position_unit.h
software/main/src/: bluetooth_serial.cpp  commands.cpp  controlcallback.cpp  hw_motors_impl.cpp  indication.cpp  motors.c  motors.cpp  position_unit.cpp  registers.cpp  rotsensors.cpp  serial.cpp  zk_i2c.cpp
software/main/src/drivers/: indication.cpp  motors_on_esp32.cpp
software/main/src/high_level/: commands.cpp  controlcallback.cpp  registers.cpp
software/main/src/port/: millis.c
software/main/src/subsystems_hw/: bluetooth_serial.cpp  motor_controller.cpp  position_unit.cpp  zk_i2c.c  zk_i2c.cpp
software/old/include/: common_config.h  i2c.h  motors.h
software/old/src/: i2c.cpp  main.cpp  motors.cpp  rotsensors.cpp
software/src/: controlcallback.cpp  display.cpp  i2c.cpp  main.cpp  motors.cpp  printf.cpp  rotsensors.cpp  serial.cpp
software/test/stubs/: delay.c
software/test/stubs/esp_idf/: esp_log.h
software/test/stubs/esp_idf/driver/: mcpwm.cpp  mcpwm_types.h
software/test/stubs/esp_idf/hal/: gpio_types.h
software/test/stubs/esp_idf/soc/: mcpwm_periph.h
